--- a/saannot.html
+++ b/saannot.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Riksupeli</title>
-    <link rel="stylesheet" href="tyyli2.css">
+    <link rel="stylesheet" media="screen and (min-width: 700px)" href="tyyli2.css">
+    <link rel="stylesheet" media="screen and (max-width: 699px)" href="tyyli2pieni.css">
 </head>
 <body>
     <div id="tausta">
